# slow_net

./: CMakeLists.txt  LICENSE  main.cpp
src/: default_neuron.cc  default_neuron.h  includes.h
src/base/: active_functions.cc  active_functions.h  neuron_based.cc  neuron_based.h
test/: default_neuron_test.cc
